[ParkingLot] fix: fixed an issue where the generated ticket position was incorrect